--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 
 					<!-- dave-content col-md-6 mt-3 col-12 -->
 					<!-- col-md-8 col-lg-6 pl-md-5 py-lg-5 -->
-					<div class="col-md-8 col-lg-6 col-xl-8 pl-md-5 py-lg-5 my-auto">
+					<div class="col-md-8 col-lg-6 col-xl-7 pl-md-5 py-lg-5 my-auto">
 						<p class="mb-0">Hi! My Name is</p>
 						<h1 class="mt-2 text-md-left">Ryan Dave</h1>
 						<h1 class="mt-2 text-md-left">Full Stack Web Developer</h1>
-						<p class="text-justify">I specialize in crafting modern solutions that solve complex problems. I thrive in both team-based and self-directed projects because I prioritize collaboration and independence.</p>
+						<p class="">I specialize in crafting modern solutions that solve complex problems. I thrive in both team-based and self-directed projects because I prioritize collaboration and independence.</p>
 					</div>
 			</div>
 		</div>
@@ -88,7 +88,7 @@
             
                 <div class="card bg-light col-xl-4 mb-5 mb-xl-0 mr-xl-5 ml-xl-5">
                     <div class="card-body">
-                        <img src="./images/backend.png" height="270" class="card-img-top" alt="...">
+                        <img src="./images/backend.png" class="card-img-top" alt="..." id="ecommerce-img1">
                         <h5 class="card-title mt-3">E-Commerce</h5>
                         <h6 class="card-subtitle text-muted mb-2">Back-End Programming</h6>
                         <p class="card-text">
@@ -142,6 +142,37 @@
                     <img class="img-fluid" width="150" src="images/logo-sublime-text-3.png"/>
                 </div>
             </div>
+
+            <div class="row d-none d-md-block mt-md-6 pt-5 ">
+                        <div class="offset-xl-3 col-xl-6">
+                            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="images/adobe-ai.png" class="d-block w-50" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/adobe-id.png" class="d-block w-40" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="images/adobe-ps.jpg" class="d-block w-40" alt="...">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
         </div>
 
 
@@ -184,6 +215,8 @@
                 </div>
             </div>
         </div>
+
+
    
 
 
